--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
     left: 0;
     height: 60px;
     width: 100%;
-    padding: 10px 14px;
     background: var(--task-bar-color);
 }
 
@@ -57,27 +56,54 @@
 .task-bar .image-text {
     display: flex;
     align-items: center;
+    height: 100%;
 }
 
 .task-bar .image-text img {
     width: 40px;
-    border-radius: 50px;
+    height: 40px;
+    border-radius: 100%;
 }
 
 .task-bar .image-text .app-name {
-    color: #FFFFFF;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 8px;
+    color: #FFFFFF;
 }
 
 .task-bar .image-text .u-name {
     color: #FFFFFF;
     padding-right: 10px;
-    padding-bottom: 8px;
 }
 
 .task-bar .image-text .image-user {
-    width: 40px;
-    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding-right: 10px;
+}
+
+.task-bar .image-text .image {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding-left: 10px;
+}
+
+.sidebar .nav-links {
+    display: flex;
+    align-items: center;
+    height: 60px;
+}
+
+.sidebar a {
+    text-decoration: none;
+    color: #FFFFFF;
+    text-align: center;
+    display: flex;
+}
+
+.sidebar i {
+    padding-right: 10px;
+    padding-left: 15px;
 }
